Fix ui visibility
Resolves https://github.com/lindylearn/unclutter/issues/274

--- a/apps/unclutter/source/data/siteTweaks.css
+++ b/apps/unclutter/source/data/siteTweaks.css
@@ -895,7 +895,7 @@ picture {
 }
 
 /* https://www.sciencehistory.org/distillations/mouse-heaven-or-mouse-hell */
-iframe:not(.lindy-allowed-elem) {
+iframe:not(.lindy-overlay-elem) {
     max-width: 100% !important;
 }
 
